2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* ConfigService.cpp: Initialise static member theInstance to NULL.

	* Application.cpp: Fixed it so that myStateManager is inited to NULL.

	* InputDevice.cpp: Fixed a delete to a delete[].

2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* NEWS: update

	* RendererFactory.cpp: Added TILE support.

	* TextBox.h Label.h: Sorted out argument ordering.

	* Button.h: Tidy up and added another constructor.

	* GuiService.cpp/h: Added Console, TextBox, Button and reordered args 
	  for Label changes.

	* TestServices.cpp: Cut datamodel test.

	* StateManager.cpp: Delete old code.

	* states.xml: Added remaining widgets.

2002-12-04 M Pollard <circlemaster@blueyonder.co.uk>
	* RectangleRenderer.cpp/h Renderer.cpp/h: Renamed the file and the
	  class RectangleRenderer to Renderer for better clarity of naming.

	* *Renderer.cpp/h Panel.h TextBox.h Console.cpp/h: Button.h
	  Changed for Renderer name change.

	* Rectangle.h: Made SDLRect returned by getSDLRect a const.

	* DrawDevice.h OGLDrawDevice.cpp/h SDLDrawDevice.cpp/h:
	  Adjusted for changes to Rectangle.
	
2002-12-03 M Pollard <circlemaster@blueyonder.co.uk>
	* OgreApp.cpp/h: Tidy up and the prefix "Example" of Application and
	  FrameListener to "Base"

	* states.xml: Changed syntax to be slightly clearer while adding
	  <layout> & <renderers> tags.

	* StateManager.cpp/h GuiService.cpp/h: Updated for new syntax.

2002-12-02 M Pollard <circlemaster@blueyonder.co.uk>
	* Various Makefile.am's: Altered for the new place where DimeServices.
	  cpp/h have been put.  Added some stuff to EXTRA_DIST

	* OgreApp.cpp: Fixed this up with several workarounds.

	* Application.cpp/h Dime.cpp OgreApp.cpp DebugGameview.cpp: Altered
	  this for new location of DimeServices.

	* configure.ac/in: moved ogre down in the build till it's fixed.

2002-12-02 M Pollard <circlemaster@blueyonder.co.uk>
	* configure.ac/in: resync'd .in bumped required eris version to 0.9.7